src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_eq_specialized_bool_false.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let v = false

if v == false { "ok" } else { "err" }
}

OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lfalse r1
  1  isfalse r1
  2  jmp 3   ; to 5
  3  lstr r0, "ok"
  4  jmp 2   ; to 6
  5  lstr r0, "err"
  6  ret
