src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_eq_specialized_float.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let v = 1.0

if v == 1.0 { "ok" } else { "err" }

OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lnum r1, 1.0
  1  iseqf r1, 1.0
  2  jmp 3   ; to 5
  3  lstr r0, "ok"
  4  jmp 2   ; to 6
  5  lstr r0, "err"
  6  ret
