src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_eq_specialized_int.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let v = 1

if v == 1 { "ok" } else { "err" }

OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 1
  1  iseqi r1, 1
  2  jmp 3   ; to 5
  3  lstr r0, "ok"
  4  jmp 2   ; to 6
  5  lstr r0, "err"
  6  ret
